# foxes-opt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docs  history.md  pkg_info.txt  pyproject.toml  requirements.txt  requirements_py3_11.txt  requirements_py3_12.txt  setup.cfg
.github/workflows/: deploy.yml  publish.yml  publish_pypi.yml  publish_testpypi.yml  run_tests.yml  test.yml
docs/: .buildinfo  CHANGELOG.html  api.html  api_problems.html  api_problems_geom.html  citation.html  examples.html  genindex.html  history.html  index.html  installation.html  objects.inv  parameter_files.html  searchindex.js  sitemap.xml  testing.html
docs/_foxesopt/constraints/: AreaGeometryConstraint.__init__.html  AreaGeometryConstraint.__str__.html  AreaGeometryConstraint.ana_deriv.html  AreaGeometryConstraint.calc_individual.html  AreaGeometryConstraint.calc_population.html  AreaGeometryConstraint.component_names.html  AreaGeometryConstraint.finalize.html  AreaGeometryConstraint.finalize_individual.html  AreaGeometryConstraint.finalize_population.html  AreaGeometryConstraint.html  AreaGeometryConstraint.initialize.html  AreaGeometryConstraint.initialized.html  AreaGeometryConstraint.n_components.html  AreaGeometryConstraint.n_vars_float.html  AreaGeometryConstraint.n_vars_int.html  AreaGeometryConstraint.rename_vars_float.html  AreaGeometryConstraint.rename_vars_int.html  AreaGeometryConstraint.var_names_float.html  AreaGeometryConstraint.var_names_int.html  AreaGeometryConstraint.vardeps_float.html  AreaGeometryConstraint.vardeps_int.html  FarmBoundaryConstraint.__init__.html  FarmBoundaryConstraint.html  MinDistConstraint.__init__.html  MinDistConstraint.calc_individual.html  MinDistConstraint.calc_population.html  MinDistConstraint.html  MinDistConstraint.initialize.html  MinDistConstraint.n_components.html  MinDistConstraint.vardeps_float.html
docs/_foxesopt/core/: FarmConstraint.__init__.html  FarmConstraint.add_to_layout_figure.html  FarmConstraint.calc_individual.html  FarmConstraint.calc_population.html  FarmConstraint.farm.html  FarmConstraint.html  FarmConstraint.n_components.html  FarmConstraint.n_sel_turbines.html  FarmConstraint.new.html  FarmConstraint.print_models.html  FarmConstraint.sel_turbines.html  FarmConstraint.vardeps_float.html  FarmObjective.__init__.html  FarmObjective.add_to_layout_figure.html  FarmObjective.farm.html  FarmObjective.html  FarmObjective.n_sel_turbines.html  FarmObjective.new.html  FarmObjective.print_models.html  FarmObjective.sel_turbines.html  FarmOptProblem.INT_INF.html  FarmOptProblem.__init__.html  FarmOptProblem.add_constraint.html  FarmOptProblem.add_objective.html  FarmOptProblem.add_to_layout_figure.html  FarmOptProblem.all_turbines.html  FarmOptProblem.apply_individual.html  FarmOptProblem.apply_population.html  FarmOptProblem.calc_gradients.html  FarmOptProblem.check_constraints_individual.html  FarmOptProblem.check_constraints_population.html  FarmOptProblem.constraints_tol.html  FarmOptProblem.counter.html  FarmOptProblem.evaluate_individual.html  FarmOptProblem.evaluate_population.html  FarmOptProblem.farm.html  FarmOptProblem.finalize_individual.html  FarmOptProblem.finalize_population.html  FarmOptProblem.get_gradients.html  FarmOptProblem.html  (+58 more)
docs/_foxesopt/objectives/: FarmVarObjective.__init__.html  FarmVarObjective.calc_individual.html  FarmVarObjective.calc_population.html  FarmVarObjective.finalize_individual.html  FarmVarObjective.html  FarmVarObjective.initialize.html  FarmVarObjective.maximize.html  FarmVarObjective.n_components.html  FarmVarObjective.vardeps_float.html  MaxFarmPower.__init__.html  MaxFarmPower.html  MaxNTurbines.__init__.html  MaxNTurbines.calc_individual.html  MaxNTurbines.calc_population.html  MaxNTurbines.html  MaxNTurbines.maximize.html  MaxNTurbines.n_components.html  MinimalMaxTI.__init__.html  MinimalMaxTI.html
docs/_foxesopt/problems/: OptFarmVars.__init__.html  OptFarmVars.add_var.html  OptFarmVars.html  OptFarmVars.initial_values_float.html  OptFarmVars.initial_values_int.html  OptFarmVars.initialize.html  OptFarmVars.max_values_float.html  OptFarmVars.max_values_int.html  OptFarmVars.min_values_float.html  OptFarmVars.min_values_int.html  OptFarmVars.opt2farm_vars_individual.html  OptFarmVars.opt2farm_vars_population.html  OptFarmVars.var_names_float.html  OptFarmVars.var_names_int.html  layoutFarmLayoutOptProblem.html  layoutFarmLayoutOptProblem.initial_values_float.html  (+36 more)
docs/_modules/: index.html
docs/_sources/: CHANGELOG.md.txt  api.rst.txt  history.md.txt  index.rst.txt  installation.md.txt
docs/_static/: sphinx_immaterial_theme.8b7122b5930e63132.min.css  sphinx_immaterial_theme.d69cbd15d52a24b41.min.css
docs/notebooks/: layout_opt.html  wake_steering.html
docs/source/: api.rst  api_problems.rst  api_problems_geom.rst  citation.md  conf.py  examples.rst  index.rst  installation.md  parameter_files.md
examples/layout_geom_reggrid/: run_pymoo.py
examples/layout_geom_reggrids/: run_pymoo.py
examples/layout_regular_grid/: run_gg.py  run_pymoo.py
examples/layout_regular_grids/: run_pymoo.py
examples/layout_single_state/: run_gg.py  run_pymoo.py
examples/layout_wind_rose/: run_gg.py  run_pymoo.py
examples/wake_steering/: run_gg.py  run_pymoo.py
examples/yaml_input/: README.md  inputs.yaml
foxes_opt/: __init__.py
foxes_opt/constraints/: __init__.py  area_geometry.py  min_dist.py
foxes_opt/core/: __init__.py  farm_constraint.py  farm_objective.py  farm_opt_problem.py  farm_vars_problem.py  pop_states.py
foxes_opt/input/: __init__.py
foxes_opt/objectives/: __init__.py  farm_vars.py  max_n_turbines.py
foxes_opt/output/: __init__.py  opt_output.py  results_writer.py
foxes_opt/problems/: __init__.py  opt_farm_vars.py
makedocs/: Makefile
makedocs/source/: api_problems.rst  api_problems_geom.rst  conf.py  examples.rst  index.rst  parameter_files.md  testing.md
notebooks/: layout_opt.ipynb  wake_steering.ipynb
scratch/problems/: geom_layout.py  geom_layout_gridded.py  reggrids_layout.py
tests/00_layout_single_state/: test_layout_single_state.py
(+383 files in other folders)
