# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxes-opt"
version = "0.2.1"
authors = [
  {name = "Jonas Schulte"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Wind farm optimization for the FOXES package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Wind farm optimization"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = [
    "foxes>=1.2",
    "iwopy>=0.3",
    "pymoo>=0.6",
]

[project.optional-dependencies]
test = [
    "flake8", 
    "pytest",
]
doc = [
    "sphinx",
    "sphinx-immaterial",
    "nbsphinx",
    "ipykernel",
    "ipywidgets",
    "m2r2",
    "lxml_html_clean",
]
dev = [
    "flake8",
    "pytest",
    "jupyter",
    "objsize",
    "black[notebooks]",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/foxes-opt"
Documentation = "https://fraunhoferiwes.github.io/foxes-opt/index.html"
Repository = "https://github.com/FraunhoferIWES/foxes-opt.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/foxes-opt/issues"
Changelog = "https://github.com/FraunhoferIWES/foxes-opt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs", "makedocs"]
