# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxes-opt"
version = "0.6.1"
authors = [
  {name = "Jonas Schulte"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Wind farm optimization for the FOXES package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Wind farm optimization"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "foxes>=1.5.3",
    "iwopy>=0.3.1",
    "pymoo>=0.6",
    "xarray>=2023.9",
    "netcdf4>=1.7",
]

[project.optional-dependencies]
test = [
    "flake8>=0.1", 
    "pytest>=7.0",
]
doc = [
    "setuptools>=61.0",
    "sphinx>=5.0",
    "sphinx-immaterial>=0.10",
    "nbsphinx>=0.5",
    "ipykernel>=5.0",
    "ipywidgets>=5.0",
    "m2r2>=0.2",
    "lxml_html_clean>=0.4",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/foxes-opt"
Documentation = "https://fraunhoferiwes.github.io/foxes-opt/index.html"
Repository = "https://github.com/FraunhoferIWES/foxes-opt.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/foxes-opt/issues"
Changelog = "https://github.com/FraunhoferIWES/foxes-opt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs", "makedocs"]

[project.scripts]
foxes_opt_yaml = "foxes_opt.input.yaml.yaml:foxes_opt_yaml"
